[package]
name = "keytar"
description = "keytar bindings to safely interact with operating system keychains"
version = "0.1.2"
authors = ["stoically <stoically@protonmail.com>"]
keywords = ["keytar", "libsecret", "keychain", "credential-vault"]
edition = "2018"
repository = "https://github.com/stoically/keytar-rs"
readme = "README.md"
license = "MIT"

[dependencies]
keytar-sys = { path = "keytar-sys", version = "0.1.2" }

[workspace]
members = [
    "keytar-sys"
]
