[package]
name = "keytar"
description = "keytar bindings to safely interact with operating system keychains"
version = "0.1.6"
authors = ["stoically <stoically@protonmail.com>"]
keywords = ["keytar", "libsecret", "keychain", "credential-vault"]
edition = "2018"
repository = "https://github.com/stoically/keytar-rs"
readme = "README.md"
license = "MIT"

[dependencies]
keytar-sys = { path = "keytar-sys", version = "0.1.6" }

[features]
docs-rs = ["keytar-sys/docs-rs"]

[package.metadata.docs.rs]
features = ["docs-rs"]

[workspace]
members = [
    "keytar-sys"
]
