[package]
name = "keytar-sys"
description = "cxx bindings to keytar"
version = "0.1.2"
authors = ["stoically <stoically@protonmail.com>"]
keywords = ["keytar", "libsecret", "keychain", "credential-vault"]
edition = "2018"
repository = "https://github.com/stoically/keytar-rs"
readme = "README.md"
license = "MIT"

[dependencies]
cxx = "0.4.0"

[build-dependencies]
pkg-config = "0.3.17"
cc = "1.0.54"
cxx-build = "0.4.0"

[features]
docs-rs = []

[package.metadata.docs.rs]
features = ["docs-rs"]
